--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <!-- title -->
     <title>login form</title>
   </head>
+
   <body>
     <div class="login">
       <form>
@@ -16,21 +20,23 @@
         <h1>Log in</h1>
         <!-- email -->
         <div class="email">
-           <div class="email-icon"><i class="fa-regular fa-envelope"></i></div> <input type="email" placeholder="Email" />
+          <div class="email-icon"><i class="fa-regular fa-envelope"></i></div>
+          <input type="email" placeholder="Email" />
         </div>
         <!-- password -->
         <div class="password">
-            <div class="password-icon"><i class="fa-solid fa-lock"></i></div> <input type="password" placeholder="Password" />
+          <div class="password-icon"><i class="fa-solid fa-lock"></i></div>
+          <input type="password" placeholder="Password" />
         </div>
         <!-- forgot -->
         <div class="section">
-          <label><input type="checkbox"> Remember me</label>
+          <label><input type="checkbox" /> Remember me</label>
           <a href="#">Forgot Password?</a>
         </div>
         <!-- button -->
-       <button>Login</button>
-       <!-- sing -->
-       <div class="sign">Don't have an account? <a href="#">Register</a></div>
+        <button>Login</button>
+        <!-- sing -->
+        <div class="sign">Don't have an account? <a href="#">Register</a></div>
       </form>
     </div>
   </body>
